--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.9.1",
+    "esbuild": "^0.25.5",
     "sharp": "^0.34.2"
   }
 }
