--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,12 +39,10 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           capture_stdout: true # 捕获 script 块的输出并显示在 Actions 日志中
           script: |
-            # 这里的脚本内容必须有正确的缩进，通常是两个空格
-            # 且不能有多余的缩进，否则 YAML 会解析错误
             set -x 
-            
+
             SOURCE_DIR="${{ github.workspace }}/dist/"
-            REMOTE_PATH="/www/wwwroot/rocli.cn/" # 你的实际项目根目录路径
+            REMOTE_PATH="/www/wwwroot/rocli.cn/"
 
             echo "远程目标路径: $REMOTE_PATH"
             echo "本地源路径: $SOURCE_DIR"
@@ -56,7 +54,7 @@ jobs:
             echo "远程服务器上的 rsync 命令已确认存在。"
 
             rsync -avz --delete --exclude=".user.ini" "$SOURCE_DIR" "${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:$REMOTE_PATH/"
-            
+
             if [ $? -eq 0 ]; then
               echo "Rsync 命令执行成功。"
             else
