--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
+    "@counterscale/tracker": "^3.2.0",
     "astro": "^5.9.1",
     "esbuild": "^0.25.5",
     "sharp": "^0.34.2"
